# Neleus

./: run.bat
app/: CMakeLists.txt  build.gradle  run.bat
app/src/androidTest/java/cn/com/hangsheng/neleus/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: duk_module_duktape.c  duk_module_duktape.h  native-lib-empty.cpp  native-lib.cpp
app/src/main/java/cn/com/hangsheng/neleus/: MainActivity.kt  NeleusAccessibilityOperator.kt  NeleusAccessibilityProcess.kt  NeleusAccessibilityService.kt  NeleusUtil.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: accessibility_config.xml
app/src/test/java/cn/com/hangsheng/neleus/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
